# scikit-learn-mooc

./: .buildinfo  local-install-instructions.md  pyproject.toml  searchindex.js
appendix/: notebook_timings.html
notebooks/: 01 - tabular_data_exploration.ipynb  01_tabular_data_exploration.ipynb  02 - tabular_data_exploration_ex_01.ipynb  03 - tabular_data_exploration_sol_01.ipynb  04 - numerical_pipeline_introduction.ipynb  05 - numerical_pipeline_ex_00.ipynb  06 - numerical_pipeline_sol_00.ipynb  07 - numerical_pipeline_hands_on.ipynb  08 - numerical_pipeline_ex_01.ipynb  09 - numerical_pipeline_sol_01.ipynb  10 - numerical_pipeline_scaling.ipynb  11 - numerical_pipeline_cross_validation.ipynb  12 - categorical_pipeline.ipynb  13 - categorical_pipeline_ex_01.ipynb  14 - categorical_pipeline_sol_01.ipynb  15 - categorical_pipeline_column_transformer.ipynb  16 - categorical_pipeline_ex_02.ipynb  17 - categorical_pipeline_sol_02.ipynb  18 - wrap_up_quizz_module_1.ipynb  19 - cross_validation_train_test.ipynb  20 - cross_validation_validation_curve.ipynb  21 - cross_validation_learning_curve.ipynb  22 - cross_validation_ex_01.ipynb  23 - cross_validation_sol_01.ipynb  24 - wrap_up_quizz_module_2.ipynb  25 - parameter_tuning_manual.ipynb  26 - parameter_tuning_ex_02.ipynb  27 - parameter_tuning_sol_02.ipynb  28 - parameter_tuning_grid_search.ipynb  29 - parameter_tuning_randomized_search.ipynb  30 - parameter_tuning_parallel_plot.ipynb  31 - parameter_tuning_nested.ipynb  33 - parameter_tuning_sol_03.ipynb  34 - wrap_up_quizz_module_3.ipynb  36 - linear_models_ex_01.ipynb  (+47 more)
(+35 files in other folders)
